--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "dotenv": "^6.1.0",
-    "joi": "^14.3.0",
+    "dotenv": "^6.2.0",
+    "joi": "^14.3.1",
     "jsonwebtoken": "^8.4.0",
-    "koa": "^2.6.2",
+    "koa": "^2.7.0",
     "koa-bodyparser": "^4.2.1",
     "koa-router": "^7.4.0",
-    "mongoose": "^5.3.14"
+    "mongoose": "^5.4.10"
   },
   "scripts": {
     "start": "node src",
@@ -28,9 +28,14 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "eslint": "^5.9.0",
+    "babel-eslint": "^10.0.1",
+    "eslint": "^5.13.0",
     "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-plugin-import": "^2.14.0",
-    "nodemon": "^1.18.7"
+    "eslint-config-react-app": "^3.0.6",
+    "eslint-plugin-flowtype": "^3.2.1",
+    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-react": "^7.12.4",
+    "nodemon": "^1.18.9"
   }
 }
